# zz-cardbattle

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  Task.md  build.sh  cardbattle.db
client/: README.md  pubspec.yaml  test_polling.dart
client/lib/: main.dart
client/lib/providers/: auth_provider.dart  game_provider.dart
client/lib/screens/: battle_screen.dart  home_screen.dart  login_screen.dart
client/lib/services/: api_service.dart  server_config.dart  websocket_service.dart
client/test/: widget_test.dart
server/: CMakeLists.txt  CMakePresets.json
server/configs/: static_config.yaml  static_config_test.yaml
server/include/: types.hpp  utils.hpp
server/include/handlers/: auth_handlers.hpp  game_handlers.hpp  game_ws_handler.hpp  health_handler.hpp
server/include/managers/: battle_manager.hpp  session_manager.hpp  user_manager.hpp
server/src/: main.cpp  sqlite_db.cpp  utils.cpp
server/src/handlers/: auth_handlers.cpp  game_handlers.cpp  game_ws_handler.cpp
server/src/managers/: battle_manager.cpp  session_manager.cpp  user_manager.cpp
server/tests/: conftest.py  test_battle_flow.py  test_integration.py  test_websocket_game_flow.py
src/: CMakeLists.txt
src/Client/: CMakeLists.txt
src/Client/lib/: main.dart
src/Client/lib/providers/: auth_provider.dart  game_provider.dart
src/Client/lib/screens/: battle_screen.dart  home_screen.dart  login_screen.dart
src/Client/lib/services/: api_service.dart  websocket_service.dart
src/Client/public/: index.html
src/Client/src/: main.cpp
src/Server/: CMakeLists.txt  static_config.yaml
src/Server/include/: ConfigurableServer.h  Router.h  common.h  types.hpp
src/Server/include/handlers/: deck_handlers.hpp  game_handlers.hpp  game_ws_handler.hpp
src/Server/include/managers/: battle_manager.hpp  deck_manager.hpp  session_manager.hpp  user_manager.hpp
src/Server/src/: ConfigurableServer.cpp  Router.cpp  main.cpp  main_old.cpp  sqlite_db.cpp  sqlite_db.hpp  types.cpp
src/Server/src/handlers/: auth_handlers.cpp  deck_handlers.cpp  game_handlers.cpp  game_ws_handler.cpp  health_handler.cpp
src/Server/src/managers/: battle_manager.cpp  deck_manager.cpp  session_manager.cpp  user_manager.cpp
